# TomatoScan

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.front  README.md  docker-compose.override.yml  docker-compose.yml  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: issue-standard.md
.github/workflows/: ci-app.yml
alembic/: env.py
alembic/versions/: c53cc2cea026_init_user_prediction.py
docs/: rapport_evaluation_20260624_163236.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: tomatoscan.json
monitoring/grafana/provisioning/alerting/: alertes.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
notebooks/: exploration_mobilenetv2.ipynb
src/tomatoscan/api/: __init__.py  main.py  metrics.py
src/tomatoscan/api/core/: __init__.py  limiter.py  owasp.md  security.py
src/tomatoscan/api/routes/: __init__.py  auth.py  health.py  history.py  predict.py  reports.py
src/tomatoscan/api/schemas/: __init__.py  auth.py  history.py  predict.py  reports.py
src/tomatoscan/api/services/: __init__.py  model_service.py
src/tomatoscan/database/: __init__.py  connexion.py  modeles.py
src/tomatoscan/front/: .env.example  app.py  requirements.txt
src/tomatoscan/front/.streamlit/: config.toml
src/tomatoscan/front/pages/: history.py  login.py  predict.py
src/tomatoscan/front/utils/: __init__.py  api_client.py
src/tomatoscan/model/: evaluate.py  preprocess.py  train.py
tests/: conftest.py
tests/test_api/: __init__.py  test_auth.py  test_health.py  test_history.py  test_predict.py  test_reports.py  test_security.py  test_security_edge.py
tests/test_database/: test_modeles.py
