[project]
name = "tomatoscan"
version = "0.1.0"
description = "Détection de maladies sur tomates par CNN (MobileNetV2)"
requires-python = ">=3.11,<3.14"

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    # ML
    "tensorflow>=2.16.1",
    "numpy>=1.26.4",
    "pillow>=10.3.0",
    "scikit-learn>=1.4.2",
    "mlflow>=2.13.0",
    # App
    "streamlit>=1.35.0",
    # Data
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.0",
    # Logs
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
