[project]
name = "tomatoscan"
version = "0.1.0"
description = "Détection de maladies sur tomates par CNN (MobileNetV2)"
requires-python = ">=3.11,<3.14"

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    # ML — tensorflow-macos/metal sont macOS uniquement ; torch gère l'inférence en prod/CI
    "tensorflow-macos>=2.16.1; sys_platform == 'darwin'",
    "tensorflow-metal>=1.1.0; sys_platform == 'darwin'",
    "numpy>=1.26.4",
    "pillow>=10.3.0",
    "scikit-learn>=1.4.2",
    # App
    "streamlit>=1.36.0",
    "requests>=2.31.0",
    # Data
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.0",
    # Logs
    "loguru>=0.7.2",
    # Monitoring
    "prometheus-client>=0.20.0",
    # Dataset
    "kaggle>=1.6.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "slowapi>=0.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.uv]
constraint-dependencies = ["torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
